#pragma once

#include <plog/Log.h>
#include "plog/Initializers/RollingFileInitializer.h"
#include <plog/Initializers/ConsoleInitializer.h>

class Logger {
public:
    Logger();
};