#pragma once

#include "entity.hpp"

class ReproductionStrategy{
public:
    //virtual void reproduce(Entity *entity_ptr) = 0;
};

class Asexual : ReproductionStrategy{
public:
    //void reproduce(Entity *entity_ptr) override final;
};